--- a/Source/index.html
+++ b/Source/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="mt-[20px] flex flex-col items-center">
         <h2 class="text-2xl mb-[20px]">Speed</h2>
-        <input type="number" class="h-[50px] w-[200px]" id="inputSpeed" />
+        <input type="number" class="h-[50px] w-[200px] rounded-lg bg-gray-900 text-white px-2 id="inputSpeed" />
         <button class="mt-[20px] bg-red-600 py-2 px-2 rounded-sm w-[100px" id="btnSpeed">Enter</button>
       </div>
     </section>
