rock-papper-scisson

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>DevGame</title>
 </head>
 <body>
-  <p>Play<a href="./Source/index.html">here</a></p>
+  <p>Play<a href="./Snak/index.html">Snak</a></p>
+  <p>Play<a href="./Rock-papper-scisson/index.html">Rock-Papper-Scisson</a></p>
 </body>
 </html>
