--- a/Snak/index.html
+++ b/Snak/index.html
@@ -19,11 +19,23 @@
       </div>
       <div class="mt-[20px] flex flex-col items-center">
         <h2 class="text-2xl mb-[20px]">Speed</h2>
-        <input type="number" class="h-[50px] w-[200px] rounded-lg bg-gray-900 text-white px-2 id="inputSpeed" />
-        <button class="mt-[20px] bg-red-600 py-2 px-2 rounded-sm w-[100px" id="btnSpeed">Enter</button>
+        <input type="number" class="h-[50px] w-[200px] rounded-lg bg-gray-900
+        text-white px-2 id="inputSpeed" />
+        <button
+          class="mt-[20px] bg-red-600 py-2 px-2 rounded-sm w-[100px"
+          id="btnSpeed"
+        >
+          Enter
+        </button>
       </div>
     </section>
-    <button onclick="startNewGame()" id="newGameBtn" class="m-atuo mt-[20px] bg-gray-600 py-[10px] px-[40px] rounded-md hover:border-2 hover:border-black hover:text-white">Start</button>
+    <button
+      onclick="startNewGame()"
+      id="newGameBtn"
+      class="m-atuo mt-[20px] bg-gray-600 py-[10px] px-[40px] rounded-md hover:border-2 hover:border-black hover:text-white"
+    >
+      Start
+    </button>
     <script src="./script.js"></script>
   </body>
 </html>
